avalon removed